--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,2 +1,5 @@
 spring.application.name=bank
 #spring.cloud.config.uri=http://config-server:8888
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 20000
+ribbon.ConnectTimeout: 3000
+ribbon.ReadTimeout: 10000
